# cen598-embedded-ml-final-project

./: .gitmodules  Pipfile  README.md  monitor  notifier  pyrightconfig.json  recording.csv
predictor/: CMakeLists.txt
predictor/src/: load_model.cpp  power_model.cpp  predictor.cpp
src/: monitor.py  notifier.py  notifier2.py
